--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "@mdi/font": "^4.8.95",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
+    "angular": "^1.7.9",
     "bootstrap": "^4.4.1",
     "compass-mixins": "^0.12.10",
     "rxjs": "~6.4.0",
