--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular": "^1.7.9",
     "bootstrap": "^4.4.1",
     "compass-mixins": "^0.12.10",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
